--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,23 @@
   <script src="js/app.js"></script>
 </head>
 <body>
+  <header>
+    <div class="title">
+      <ul>
+        <li><img class="logo" src="src/logo.png"></li>
+        <li class="header-band"><h1>Select features and choose your Super Heroe</h1></li>
+      </ul>
+    </div>
+    <nav class="navbar">
+      <ul>
+        <li><a href="#"> I'm Sexy and I know it!</a></li>
+        <li><a href="#"> I'm a Big Boy</a></li>
+        <li><a href="#"> Stronger than me? no way! </a></li>
+        <li><a href="#">Mirror, mirror, tell me who is the most handsome of the world?</a></li>
+        <li><a href="#">Feature</a></li>
+      </ul>
+    </nav>
+  </header>
   
 </body>
 </html>
