--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
   <title>Page Title</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700" rel="stylesheet">
   <script src="js/app.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
     <div class="title">
       <ul>
         <li><img class="logo" src="src/logo.png"></li>
-        <li class="header-band"><h1>Select features and choose your Super Heroe</h1></li>
+        <li class="title-band"><h1>Select features and choose your Super Heroe</h1></li>
       </ul>
     </div>
     <nav class="navbar">
