--- a/client/index.html
+++ b/client/index.html
@@ -13,8 +13,8 @@
   <header>
     <div class="title">
       <ul>
-        <li><img class="logo" src="src/logo.png"></li>
-        <li class="title-band"><h1>Select features and choose your Super Heroe</h1></li>
+        <li><img class="logo" src="src/logo.svg"></li>
+        <li class="title-band"><h1>Select features and choose your Super Hero</h1></li>
       </ul>
     </div>
     <nav class="navbar">
