created function generating html

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,13 @@
       </ul>
     </nav>
   </header>
-  
+  <section>
+    <div id="heroes-all">
+      Loading data...
+    </div>
+  </section>
+  <footer>
+    <p>&copy; 2018 Adore your Super Hero</p>
+  </footer>
 </body>
 </html>
