--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,700" rel="stylesheet">
-  <script src="js/app.js"></script>
 </head>
 <body>
   <header>
@@ -35,5 +34,6 @@
   <footer>
     <p>&copy; 2018 Adore your Super Hero</p>
   </footer>
+  <script type=module src="js/app.js"></script>
 </body>
 </html>
