--- a/client/index.html
+++ b/client/index.html
@@ -18,10 +18,10 @@
     </div>
     <nav class="navbar">
       <ul>
-        <li><a href="#"> I'm Sexy and I know it!</a></li>
-        <li><a href="#"> I'm a Big Boy</a></li>
-        <li><a href="#"> Stronger than me? no way! </a></li>
-        <li><a href="#">Mirror, mirror, tell me who is the most handsome of the world?</a></li>
+        <li><a href="#">I'm Sexy and I know it!</a></li>
+        <li><a href="#">I'm a Big Boy</a></li>
+        <li><a href="#">Stronger than me? no way! </a></li>
+        <li><a href="#">Welcome to the dark side</a></li>
         <li><a href="#">Feature</a></li>
       </ul>
     </nav>
