--- a/client/index.html
+++ b/client/index.html
@@ -27,15 +27,6 @@
     </nav>
   </header>
   <section>
-    <!-- <div class="heroImg my-hero">
-      <img src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/images/md/1-a-bomb.jpg" alt="hero">
-    </div>
-    <div class="heroImg my-hero">
-      <img src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/images/md/1-a-bomb.jpg" alt="hero">
-    </div>
-    <div class="heroImg my-hero">
-      <img src="https://cdn.rawgit.com/akabab/superhero-api/0.2.0/api/images/md/1-a-bomb.jpg" alt="hero">
-    </div> -->
     <!-- All heroes -->
     <div id="heroes-all">
       Loading data...
@@ -45,21 +36,7 @@
   <div id="heroModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <div class="container">
-        <div class="row">
-          <div class="column column-50">
-            <img src="http://via.placeholder.com/480x640">
-          </div>
-          <div class="column column-50">
-            <h2>Hereo Alias</h2>
-            <p>Nec sane haec sola pernicies orientem diversis cladibus adfligebat. Namque et Isauri, quibus est usitatum saepe
-              pacari saepeque inopinis excursibus cuncta miscere, ex latrociniis occultis et raris, alente inpunitate adulescentem
-              in peius audaciam ad bella gravia proruperunt, diu quidem perduelles spiritus inrequietis motibus erigentes,
-              hac tamen indignitate perciti vehementer, ut iactitabant, quod eorum capiti quidam consortes apud Iconium Pisidiae
-              oppidum in amphitheatrali spectaculo feris praedatricibus obiecti sunt praeter morem.</p>
-          </div>
-        </div>
-      </div>
+      <div class="container" id="heroDetail">Insert info here</div>
     </div>
   </div>
   <footer>
